Fix line length in GIF export

We cannot use QImage::bytesPerLine() for line length calculation
because it usually includes alignment bytes, which are not
recognized by giflib (obviously!).

BUG:404160